https://crazyup.monday.com/boards/4129231679/pulses/4493452883

--- a/src/pages/footer.module.css
+++ b/src/pages/footer.module.css
@@ -87,7 +87,7 @@
   line-height: 150%;
 }
 .copyright,
-.footerModified {
+.footer {
   display: flex;
   box-sizing: border-box;
   align-items: center;
@@ -101,7 +101,7 @@
   text-align: center;
   color: var(--color-darkslategray);
 }
-.footerModified {
+.footer {
   position: relative;
   background-color: var(--color-whitesmoke);
   width: 100%;
